블로그 제목

--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,21 @@
   }
 }
 
+div{
+  box-sizing: border-box;
+}
+.list{
+  padding-left: 20px;
+  text-align: left;
+  border-bottom: 1px solid grey;
+}
+
+
+
 .black-nav{
   display: flex;
+  align-content: center;
+  padding: 20px 0px;
   background: #000;
   width: 100%;
   color: #fff;
